[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/UI/LogoV2.png" type="Texture" id=1]
[ext_resource path="res://UI/Load.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/buttons/ButtonStart.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/buttons/Quit Button Press.png" type="Texture" id=4]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/buttons/ButtonQuit.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/buttons/Start Button Press.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Quit Button Hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/buttons/Continue Button Hover.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/Start Button Hover.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/buttons/ButtonContinue.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/buttons/Continue Button Press.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/buttons/Credits Button.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/buttons/Credits Button Disabled.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/buttons/Credits Button Hover.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/buttons/Credits Button Press.png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/buttons/HiddenButtonPressed.png" type="Texture" id=17]
[ext_resource path="res://Assets/UI/buttons/HiddenButton.png" type="Texture" id=18]
[ext_resource path="res://Assets/UI/buttons/Continue Button Disabled.png" type="Texture" id=19]
[ext_resource path="res://Assets/Soundtrack/Title screen.wav" type="AudioStream" id=20]

[sub_resource type="Animation" id=1]
resource_name = "title"
length = 2.0
loop = true

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.552941, 0.74902, 0.223529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/VBoxContainer"]
margin_top = 16.0
margin_right = 1790.0
margin_bottom = 455.0
rect_min_size = Vector2( 1354, 439 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/VBoxContainer"]
margin_top = 487.0
margin_right = 1790.0
margin_bottom = 675.0

[node name="Start" type="TextureButton" parent="ColorRect/VBoxContainer/CenterContainer"]
margin_left = 607.0
margin_right = 1182.0
margin_bottom = 188.0
rect_min_size = Vector2( 575, 188 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/VBoxContainer"]
margin_top = 707.0
margin_right = 1790.0
margin_bottom = 785.0

[node name="Skip" type="TextureButton" parent="ColorRect/VBoxContainer/CenterContainer2"]
margin_left = 774.0
margin_right = 1016.0
margin_bottom = 78.0
rect_min_size = Vector2( 242, 78 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 19 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer3" type="CenterContainer" parent="ColorRect/VBoxContainer"]
margin_top = 817.0
margin_right = 1790.0
margin_bottom = 895.0

[node name="Quit" type="TextureButton" parent="ColorRect/VBoxContainer/CenterContainer3"]
margin_left = 774.0
margin_right = 1016.0
margin_bottom = 78.0
rect_min_size = Vector2( 242, 78 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer4" type="CenterContainer" parent="ColorRect/VBoxContainer"]
margin_top = 927.0
margin_right = 1790.0
margin_bottom = 1005.0

[node name="Credits" type="TextureButton" parent="ColorRect/VBoxContainer/CenterContainer4"]
margin_left = 774.0
margin_right = 1016.0
margin_bottom = 78.0
rect_min_size = Vector2( 242, 78 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 14 )
expand = true
stretch_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Load" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/title = SubResource( 1 )

[node name="DebugSkip" type="TextureButton" parent="."]
margin_left = 338.268
margin_top = 227.727
margin_right = 346.268
margin_bottom = 235.727
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 17 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
autoplay = true
[connection signal="pressed" from="ColorRect/VBoxContainer/CenterContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/CenterContainer2/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/CenterContainer3/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/CenterContainer4/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="DebugSkip" to="." method="_on_DebugSkip_pressed"]
